src/reader/entry/tests/error/variable_assignation.sibs
$var = not_valid_value;
$var = ("release{$version}-win.zip");
$var = [];
$var = IF $dev == "one" [ @os; ];